jf-table-view: Some styling fixing, make actions stay visible when row is selected

--- a/src/ui_components/jf_table_view/jf-table-view.less
+++ b/src/ui_components/jf_table_view/jf-table-view.less
@@ -40,6 +40,7 @@
       flex-grow: 1;
       max-width: 380px;
       min-width: 150px;
+      width: 100%;
       .table-counter {
         font-size: 16px;
         font-weight: 700;
@@ -127,6 +128,7 @@
       margin: 0;
       position: relative;
 
+      &.selected,
       &:hover {
         .jf-table-cell {
           &.actions {
@@ -141,7 +143,6 @@
               }
             }
           }
-
         }
       }
       &.sticky {
